--- a/index.html
+++ b/index.html
@@ -3,36 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.cdnfonts.com/css/edo" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="imagex/png" href="assets/Logo_Barbearia.ico">
-    <title>Adilson Suplementos</title>
+    <title>Black Skull Barber Shop</title>
 </head>
 <header>
     <a href="index.html"><img id="logo" src="assets/Logo_Barbearia.png" alt="Logo do Adilson Suplementos"><p>Black Skull Barber Shop</p></a>
 </header>
 <body>
     <section>
-        <h3>Aceitamos dinheiro,  <a href="https://nubank.com.br/cobrar/kynb/677f1554-0a74-41f5-a652-e85c360cce4c" target="_blank"><img id="logoImg" src="assets/logo-pix.png" alt="Logo Instagram"> pix</a> e cartão de débito ou crédito.</h3>
-    </section>
-    <section>
-        <div class="promo">
-            <a href="promos.html">Escola um viado!</a>
-        </div>
+        <h3>Aceitamos dinheiro, pix e cartão de débito ou crédito.</h3>
     </section>
     <section>
         <div class="itens">
-            <a href="creatinas.html"><img src="assets/img itens/nana.jpeg" alt="">
-                Anal-Ilson</a>
+            <p>Escolha o seu barbeiro para agendar o seu horário.</p>
+        </div>
+    </section>
+    <section>
+        <div class="itens">
+            <a href="creatinas.html"><img class="barberImg" src="assets/img itens/nana.jpeg" alt="Foto do Nana.">Nana</a>
         </div>
 
         <div class="itens">
-            <a href="wheyProteins.html"><img src="assets/img itens/gui.jpeg" alt="">
-                Guigui Garganta Profunda</a>
+            <a href="wheyProteins.html"><img class="barberImg" src="assets/img itens/gui.jpeg" alt="Foto do Guigui.">Guigui</a>
         </div>
 
         <div class="itens">
-            <a href="preTreinos.html"><img src="assets/img itens/will.jpeg" alt="">
-                Will Bombom Vermelho</a>
+            <a href="preTreinos.html"><img class="barberImg" src="assets/img itens/will.jpeg" alt="Foto do Will.">Will</a>
         </div>
 
     </section>
