--- a/nana.html
+++ b/nana.html
@@ -13,25 +13,18 @@
 </header>
 <body>
     <section>
-        <h3>Aceitamos dinheiro, pix e cartão de débito ou crédito.</h3>
+        <h3>Escolha o seu serviço</h3>
+        <select name="servico" id="escolhaServico" required>
+            <option value="1" selected>Corte Social - R$20,00</option>
+            <option value="2">Corte Degradê - R$25,00</option>
+            <option value="3">Barba - R$25,00</option>
+            <option value="4">Corte e Barba - R$45,00</option>
+            <option value="5">Sombrancelha - R$10,00</option>
+            <option value="6">Lavagem - R$10,00</option>
+        </select>
     </section>
-    <section>
-        <div class="Cabeca">
-            <p>Escolha o seu barbeiro abaixo.</p>
-        </div>
-    </section>
-    <section>
-        <div class="itens">
-            <a href="nana.html"><img class="barberImg" src="assets/img itens/nana.jpeg" alt="Foto do Nana.">Nana</a>
-        </div>
 
-        <div class="itens">
-            <a href="gui.html"><img class="barberImg" src="assets/img itens/gui.jpeg" alt="Foto do Guigui.">Guigui</a>
-        </div>
-
-        <div class="itens">
-            <a href="will.html"><img class="barberImg" src="assets/img itens/will.jpeg" alt="Foto do Will.">Will</a>
-        </div>
+    <section>
 
     </section>
 </body>
