--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </section>
     <section>
         <div class="Cabeca">
-            <p>Escolha o seu barbeiro abaixo.</p>
+            <p>Escolha o seu barbeiro.</p>
         </div>
     </section>
     <section>
@@ -34,6 +34,7 @@
         </div>
 
     </section>
+    <script type="module" src="js/script.js" ></script>
 </body>
 <footer>
     <a href="https://www.instagram.com/blackskull.barbers/" target="_blank"><img id="logoImg" src="assets/logo instagram.png" alt="Logo Instagram"> Black Skull Barber Shop</a>
