--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
 
     </section>
-    <script type="module" src="js/script.js" ></script>
+    <script type="module" src="js/script1.js" ></script>
 </body>
 <footer>
     <a href="https://www.instagram.com/blackskull.barbers/" target="_blank"><img id="logoImg" src="assets/logo instagram.png" alt="Logo Instagram"> Black Skull Barber Shop</a>
