--- a/nana.html
+++ b/nana.html
@@ -14,13 +14,13 @@
 </header>
 
 <body>
-    <h2>Escolha um serviço</h2>
-    <select id="servicos-select">
-        <option value="">-- Selecione um serviço --</option>
-    </select>
-  
     <div class="container">
         <h2>Agende seu horário</h2>
+        
+        <label for="servico">Serviço:</label>
+        <select id="servicos-select">
+            <option value="">-- Selecione um serviço --</option>
+        </select>
     
         <label for="data">Data:</label>
         <input type="date" id="data">
