--- a/nana.html
+++ b/nana.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <h2>Agende seu horário</h2>
+        <h2>Agende seu horário com o Nana</h2>
         
         <label for="servico">Serviço:</label>
         <select id="servicos-select">
@@ -39,7 +39,7 @@
         <div id="resumo"></div>
     </div>
 
-    <script src="js/script.js" defer></script>
+    <script src="js/script1.js" defer></script>
   
 </body>
 
