--- a/will.html
+++ b/will.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <h2>Agende seu horário com o Gui</h2>
+        <h2>Agende seu horário com o Will</h2>
         
         <label for="servico">Serviço:</label>
         <select id="servicos-select">
@@ -39,7 +39,7 @@
         <div id="resumo"></div>
     </div>
 
-    <script src="js/script2.js" defer></script>
+    <script src="js/script3.js" defer></script>
   
 </body>
 
