--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </section>
     <section>
         <div class="itens">
-            <a href="nana.html"><img class="barberImg" src="assets/img itens/nana.jpeg" alt="Foto do Nana.">Nana</a>
+            <a href="nana.html"><img class="barberImg" src="assets/img itens/nana.jpg" alt="Foto do Nana.">Nana</a>
         </div>
 
         <div class="itens">
