--- a/gui.html
+++ b/gui.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="container">
-        <h2>Agende seu horário com o Gui</h2>
+        <h2>Agende seu horário com o Guigui</h2>
         
         <label for="servico">Serviço:</label>
         <select id="servicos-select">
